Fix visibilidad header y footer

--- a/src/Arduinode.sass
+++ b/src/Arduinode.sass
@@ -59,7 +59,7 @@ input[type=time]
 
 header, .footer
     position: fixed
-    z-index: 2
+    z-index: 5
     padding: 5px
     width: 100%
     top: 0
